--- a/assets/css/stype.css
+++ b/assets/css/stype.css
@@ -476,6 +476,7 @@ row::after{
     border: none;
     padding: 10px 16px;
     cursor: pointer;
+    -webkit-appearance: none;
 }
 
 .contact-send:hover{
