--- a/assets/css/stype.css
+++ b/assets/css/stype.css
@@ -5,6 +5,10 @@
     font-family: "lato",sans-serif;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 @keyframes modalfacein {
     from{
         opacity: 0;
@@ -220,14 +224,30 @@ a{
 #slider{
     margin-top: 46px;
     padding-top: 50%;
-    background: url('../../assets/img/slider/slider1.jpg') top center / cover no-repeat;
+    /* background: url('../../assets/img/slider/slider1.jpg') top center / cover no-repeat; */
     position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: auto;
 }
+
+.img-slider{
+    width: 100%;
+    position:absolute;
+    top: 0;
+    height: auto;
+}
+
+
+
+
+
 
 #slider .text-content{
     position: absolute;
     bottom: 47px;
     color: #fff;
+    text-shadow: 0 0 1px #000;
     left: 50%; /*cách lề trái 50% */
      transform: translateX(-50%); /* thụt lùi 50% chuỗi */
     
