--- a/assets/css/stype.css
+++ b/assets/css/stype.css
@@ -224,19 +224,12 @@ a{
 #slider{
     margin-top: 46px;
     padding-top: 50%;
-    /* background: url('../../assets/img/slider/slider1.jpg') top center / cover no-repeat; */
+    background: url('../../assets/img/slider/slider1.jpg') top center / cover no-repeat;
     position: relative;
-    overflow: hidden;
-    width: 100%;
-    height: auto;
+    
 }
 
-.img-slider{
-    width: 100%;
-    position:absolute;
-    top: 0;
-    height: auto;
-}
+
 
 
 
