--- a/assets/css/stype.css
+++ b/assets/css/stype.css
@@ -224,18 +224,53 @@ a{
 
 #slider{
     margin-top: 46px;
-    padding-top: 50%;
-    background: url('../../assets/img/slider/slider1.jpg') top center / cover no-repeat;
+    /* padding-top: 50%;
+    background: url('../../assets/img/slider/slider1.jpg') top center / cover no-repeat; */
     position: relative;
-    
+    width: 100%;
 }
 
 
+.slide-show{
+    width: 100%;
+    overflow: hidden;
+    z-index: -999;
+    transition: 2s;
+}
 
+.slide-container{
+    width: 300%;
+    display: flex;
+    animation: slideAuto 10s ease-in-out infinite; 
+    /* -webkit-animation: slideAuto 10s ease-in-out infinite; */
+}
+    
 
+.myslide{
+    width: 100%;
+}
 
+#slider img{
+    width: calc(100% / 3);
+}
 
+@keyframes slideAuto {
+    10% { margin-left: 0%;}
+    30% { margin-left: 0%;}
+    40% { margin-left: -100%;}
+    60% { margin-left: -100%;}
+    70% { margin-left: -200%;}
+    90% { margin-left: -200%;}
+}
 
+@-webkit-keyframes slideAuto {
+    10% { margin-left: 0%;}
+    30% { margin-left: 0%;}
+    40% { margin-left: -100%;}
+    60% { margin-left: -100%;}
+    70% { margin-left: -200%;}
+    90% { margin-left: -200%;}
+}
 
 #slider .text-content{
     position: absolute;
