--- a/assets/css/stype.css
+++ b/assets/css/stype.css
@@ -223,15 +223,18 @@ a{
 
 
 #slider{
-    margin-top: 46px;
-    /* padding-top: 50%;
-    background: url('../../assets/img/slider/slider1.jpg') top center / cover no-repeat; */
+    /* margin-top: 46px;
     position: relative;
-    width: 100%;
+    width: 100%; */
+    margin-top: 46px;
+    padding-top: 50%;
+    background: url('../../assets/img/slider/slider1.jpg') top center / cover no-repeat;
+    position: relative;
+    object-fit: cover;
 }
 
 
-.slide-show{
+/* .slide-show{
     width: 100%;
     overflow: hidden;
     z-index: -999;
@@ -242,7 +245,7 @@ a{
     width: 300%;
     display: flex;
     animation: slideAuto 10s ease-in-out infinite; 
-    /* -webkit-animation: slideAuto 10s ease-in-out infinite; */
+   
 }
     
 .slide{
@@ -264,16 +267,8 @@ a{
     60% { margin-left: -100%;}
     70% { margin-left: -200%;}
     90% { margin-left: -200%;}
-}
+} */
 
-@-webkit-keyframes slideAuto {
-    10% { margin-left: 0%;}
-    30% { margin-left: 0%;}
-    40% { margin-left: -100%;}
-    60% { margin-left: -100%;}
-    70% { margin-left: -200%;}
-    90% { margin-left: -200%;}
-}
 
 #slider .text-content{
     position: absolute;
